--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     <span aria-hidden="true"></span>
                     <span aria-hidden="true"></span>
                     </a>
-                    <a href="https://lucasbinho.github.io/DevChallenge2">
+                    <a href="https://github.com/LucasBinho/SiteChallenge2">
                         <div class="dev">DevChallenge</div>
                     </a>
                     <div id="navbarBasicExample" class="navbar-menu">
