--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <button class="button is-medium">Start now</button>
             </div>
             <div class="column is-8">
-                <img src="team.jpg" alt="Equipe em reunião">
+                <img src="./team.jpg" alt="Equipe em reunião">
             </div>
         </div>
     </main>
